<resources>
    <string name="app_name">StoryApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="click_to_regist">Tidak memiliki akun? <b>Klik disini</b></string>
    <string name="title_favorite">Favorite</string>
    <string name="email_not_valid">Format email salah</string>
    <string name="password_not_valid">Password kurang dari 8 karakter</string>
    <string name="username">Username</string>
    <string name="click_to_login">Sudah memiliki akun? <b>Klik disini</b></string>
    <string name="register">Register</string>
    <string name="username_not_valid">Username kurang dari 5 karakter</string>
    <string name="home_title">Beranda</string>
    <string name="favorite_menu">Menu Favorit</string>
    <string name="logout">Logout</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n</string>
    <string name="detail_title">Detail Story</string>
    <string name="favorite_button">Tombol Favorit</string>
    <string name="power_disconnected">Power Disconnected</string>
</resources>